# OpenFileManager

./: LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: commands.rs  db.rs  devices.rs  error.rs  hasher.rs  lib.rs  main.rs  models.rs  scanner.rs
src/api/: commands.ts
src/components/: DeviceCard.tsx  FileTable.tsx  ProgressBar.tsx  SafetyBadge.tsx
src/hooks/: useDevices.ts  useFiles.ts  useScanProgress.ts
src/pages/: Dashboard.tsx  Devices.tsx  FileBrowser.tsx  Scanner.tsx
src/types/: index.ts
