[package]
name = "file-manager-rust"
version = "0.1.0"
description = "Photo/video file manager tracking locations across drives"
authors = ["lars"]
edition = "2021"

[lib]
name = "file_manager_rust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
blake3 = { version = "1", features = ["mmap"] }
sysinfo = { version = "0.32", default-features = false, features = ["disk"] }
walkdir = "2"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
tokio-util = "0.7"
log = "0.4"
